# BuildingSketcher3

./: .gitignore  BuildingSketcher3.sln  copy_dll_to_unity.bat  copy_to_unity.bat
AndroidPlugins/: copy_libs_to_unity.bat  local.properties  settings.gradle.kts
AndroidPlugins/app/: build.gradle.kts  list-dir.txt
AndroidPlugins/app/src/androidTest/java/com/example/paperplugin/: ExampleInstrumentedTest.kt
AndroidPlugins/app/src/main/: AndroidManifest.xml
AndroidPlugins/app/src/main/cpp/: CMakeLists.txt  LineDetector.cpp  PaperPlugin1.cpp
AndroidPlugins/app/src/main/java/com/example/paperplugin/: MainActivity.kt
AndroidPlugins/app/src/main/res/values/: strings.xml  themes.xml
AndroidPlugins/app/src/main/res/values-night/: themes.xml
AndroidPlugins/app/src/test/java/com/example/paperplugin/: ExampleUnitTest.kt
AndroidPlugins/gradle/: libs.versions.toml
AndroidPlugins/gradle/wrapper/: gradle-wrapper.properties
AndroidPlugins/paperplugin/: setup.sh
Assets/Materials/: PaperEdgeLine.mat  PaperPlane.mat
Assets/MobileARTemplateAssets/Prefabs/: AROcclusionPlane.prefab
Assets/Prefabs/: PaperPlane.prefab  TestCube.prefab  Wall.prefab
Assets/ReferenceImages/: PaperImages.asset
Assets/Scenes/: Main.unity  SampleScene.unity
Assets/Scripts/: DEPRECATED_PaperDetector_DEPRECATED.cs  PaperDetector.cs  PaperDetectorTest.cs  PaperEdgeLines.cs  PaperPlugin.cs  PipelineDebugger.cs  WallGenerator.cs
Assets/Scripts/Util/: Converter.cs  PaperPolygonClipper.cs  QuadHelper.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Documentation/: BuildingSketcherDiagrams.pptx  BuildingSketcherDocumentation.docx  BuildingSketcherDocumentation.md  docSync.ps1  ~$ildingSketcherDocumentation.docx
NativePlugins/: convertToJpg.py  testMatrix.py
NativePlugins/PaperPlugin/: CMakeLists.txt  PaperPlugin.sln
NativePlugins/PaperPlugin/PaperPlugin/: PaperPlugin.sln
NativePlugins/PaperPlugin/PaperPlugin/PaperPlugin/: PaperPlugin.vcxproj
NativePlugins/PaperPlugin/PaperPlugin1/: LineDetector.cpp  PaperPlugin.h  PaperPlugin1.cpp  PaperPlugin1.h  PaperPlugin1.vcxproj  PaperPlugin1.vcxproj.filters  cpp.hint  framework.h
NativePlugins/PaperPlugin/PaperPlugin1/x64/Debug/: PaperPlugin1.dll.recipe  PaperPlugin1.ilk  vc143.idb
NativePlugins/PaperPlugin/PaperPlugin1/x64/Debug/PaperPlugin1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NativePlugins/PaperPlugin/PaperPluginTester/: PaperPluginTester.cpp  PaperPluginTester.vcxproj  PaperPluginTester.vcxproj.filters  _testimage_test_image_drawing.rgba  _testimage_test_image_drawing.txt  test_image.txt  test_image_tilted.rgba
NativePlugins/PaperPlugin/PaperPluginTester/TestFiles/: test_image_drawing.rgba  test_image_drawing.txt  test_image_tilted.txt
NativePlugins/PaperPlugin/PaperPluginTester/x64/Debug/: PaperPluginTester.exe.recipe  PaperPluginTester.ilk  vc143.idb
NativePlugins/PaperPlugin/PaperPluginTester/x64/Debug/PaperPlu.2bd9cd13.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  PaperPluginTester.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NativePlugins/PaperPlugin/x64/Debug/: PaperPlugin1.exp  PaperPlugin1.lib  test_image.rgba
ProjectSettings/: ProjectSettings.asset
VisualStudioCode_Workspaces/: Documentation.code-workspace  NativePlugins.code-workspace
